Add GH, improve jobs UX, more consistent whitespace

--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
                 <h2>Our offer</h2>
                 <p>We offer a competitive package with benefits, an inspiring and collaborative environment and the opportunity to work with, and learn from, the best in the field.</p>
 
+                <span class="fade-out" onclick="this.parentNode.classList.remove('hide')"></span>
+
             </div>
         </div>
         </section>
@@ -143,6 +145,7 @@
                 <a href="tel:+32499379597"><i class="fa fa-fw fa-phone"></i>+32 (0)499 37 95 97</a>
                 <a href="https://twitter.com/radix_ai"><i class="fa fa-fw fa-twitter"></i>@radix_ai</a>
                 <a href="https://www.linkedin.com/company/radix-ai/"><i class="fa fa-fw fa-linkedin"></i>radix-ai</a>
+                <a href="https://github.com/radix-ai"><i class="fa fa-fw fa-github"></i>radix-ai</a>
             </p>
             <p>
                 <a class="logo" href="https://radix.ai">radix<span>.ai</span></a><br>
