--- a/index.html
+++ b/index.html
@@ -16,6 +16,38 @@
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="index.css">
 
+        <!-- Search Engine -->
+        <meta name="description" content="We build Machine Learning solutions">
+        <meta name="image" content="https://radix.ai/img/radix-ai-square-white-on-blue.png">
+        <!-- Schema.org for Google -->
+        <meta itemprop="name" content="RADIX.AI">
+        <meta itemprop="description" content="We build Machine Learning solutions">
+        <meta itemprop="image" content="https://radix.ai/img/radix-ai-square-white-on-blue.png">
+        <!-- Twitter -->
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:title" content="RADIX.AI">
+        <meta name="twitter:description" content="We build Machine Learning solutions">
+        <meta name="twitter:site" content="@radix_ai">
+        <meta name="twitter:creator" content="@radix_ai">
+        <meta name="twitter:image:src" content="https://radix.ai/img/radix-ai-square-white-on-blue.png">
+        <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+        <meta name="og:title" content="RADIX.AI">
+        <meta name="og:description" content="We build Machine Learning solutions">
+        <meta name="og:image" content="https://radix.ai/img/radix-ai-square-white-on-blue.png">
+        <meta name="og:url" content="https://radix.ai">
+        <meta name="og:site_name" content="RADIX.AI">
+        <meta name="og:type" content="website">
+        <!-- Favicon -->
+        <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+        <link rel="manifest" href="favicon/site.webmanifest">
+        <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#0066ff">
+        <link rel="shortcut icon" href="favicon/favicon.ico">
+        <meta name="msapplication-TileColor" content="#0066ff">
+        <meta name="msapplication-config" content="favicon/browserconfig.xml">
+        <meta name="theme-color" content="#0066ff">
+
     </head>
     <body>
 
