Improve job expansion

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <section id="c2a-contact">
         <div class="container">
-            <a class="button" href="mailto:hello@radix.ai"><i class="fa fa-send"></i>&nbsp;&nbsp;Contact us</a>
+            <a class="button" href="mailto:hello@radix.ai"><i class="fa fa-send"></i>Contact us</a>
         </div>
         </section>
 
@@ -140,7 +140,7 @@
             </div>
             <div class="job hide">
 
-                <h1>Machine Learning Engineer <a class="button" href="#jobs" onclick="this.parentNode.parentNode.classList.toggle('hide'); return false;"><i class="fa fa-hand-o-right"></i>&nbsp;&nbsp;Read more</a></h1>
+                <h1>Machine Learning Engineer <a href="#jobs" onclick="this.parentNode.parentNode.classList.toggle('hide'); return false;"><i class="fa fa-hand-o-right"></i>Read more</a></h1>
                 <h2>Who are we</h2>
                 <p>At <a class="logo" href="https://radix.ai">radix<span>.ai</span></a>, we design and build custom Machine Learning solutions that deliver quantifiable business value.</p>
                 <p>We hand-pick projects that we are genuinely interested in. We love projects where the latest advances in Deep Learning open doors to new applications or raise performance to unseen levels.</p>
