Slight wording improvement

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <h2>Who are we</h2>
                 <p>At <a class="logo" href="https://radix.ai">radix<span>.ai</span></a>, we design and build custom Machine Learning solutions that deliver quantifiable business value.</p>
                 <p>We hand-pick projects that we are genuinely interested in. We love projects where the latest advances in Deep Learning open doors to new applications or raise performance to unseen levels.</p>
-                <p>Our team has been carefully assembled so that we can maximize impact with a small and focused team. We value skill, motivation and a can-do attitude. We are looking for outstanding individuals who want to be part of this exceptional team.</p>
+                <p>Our team has been carefully assembled so that we can maximize impact with a small and focused group. We value skill, motivation and a can-do attitude. We are looking for outstanding individuals who want to be part of this exceptional team.</p>
 
                 <h2>What you’ll do</h2>
                 <p>You will work with our team of Machine Learning and Software Engineers to design, implement, deploy, and maintain our Machine Learning solutions.</p>
