Add link to asyncio

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     <ul>
                         <li>You are skilled in Software Engineering with Python and have a strong grasp on source control and reproducibility tooling (<a href="https://git-scm.com/book">git</a>, <a href="https://conda.io/docs/user-guide/getting-started.html">conda</a>, <a href="https://docs.python.org/3/installing/index.html">pip</a>, <a href="https://docs.docker.com/get-started/">docker</a>).</li>
                         <li>You know your way around the API and web development frameworks (<a href="http://flask.pocoo.org/">flask</a>, <a href="http://click.pocoo.org/">click</a>, <a href="http://www.hug.rest/">hug</a>) and the SciPy stack (<a href="https://pandas.pydata.org/pandas-docs/stable/10min.html">pandas</a>, <a href="https://docs.scipy.org/doc/numpy-dev/user/quickstart.html">numpy</a>, <a href="http://scikit-learn.org/stable/user_guide.html">scikit-learn</a>).</li>
-                        <li>Experience with Asynchronous I/O (asyncio), Deep Learning frameworks (<a href="https://www.tensorflow.org/">TensorFlow</a>, <a href="http://pytorch.org/">PyTorch</a>), and parallel computing libraries (<a href="https://dask.pydata.org/en/latest/">dask</a>, <a href="https://numba.pydata.org/">numba</a>) is a plus.</li>
+                        <li>Experience with Asynchronous I/O (<a href="https://docs.python.org/3/library/asyncio.html">asyncio</a>), Deep Learning frameworks (<a href="https://www.tensorflow.org/">TensorFlow</a>, <a href="http://pytorch.org/">PyTorch</a>), and parallel computing libraries (<a href="https://dask.pydata.org/en/latest/">dask</a>, <a href="https://numba.pydata.org/">numba</a>) is a plus.</li>
                     </ul>
 
                     <h2>Benefits &amp; Perks</h2>
