--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-        <title>RADIX.AI - Accelerating Machine Learning</title>
+        <title>radix.ai - Accelerating Machine Learning</title>
 
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300:latin" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400:latin" rel="stylesheet">
@@ -21,22 +21,22 @@
         <meta name="description" content="We accelerate the pace at which Machine Learning innovations are turned into reality.">
         <meta name="image" content="https://radix.ai/img/radix-ai-square-white-on-blue.png">
         <!-- Schema.org for Google -->
-        <meta itemprop="name" content="RADIX.AI">
+        <meta itemprop="name" content="radix.ai">
         <meta itemprop="description" content="We accelerate the pace at which Machine Learning innovations are turned into reality.">
         <meta itemprop="image" content="https://radix.ai/img/radix-ai-square-white-on-blue.png">
         <!-- Twitter -->
         <meta name="twitter:card" content="summary">
-        <meta name="twitter:title" content="RADIX.AI">
+        <meta name="twitter:title" content="radix.ai">
         <meta name="twitter:description" content="We accelerate the pace at which Machine Learning innovations are turned into reality.">
         <meta name="twitter:site" content="@radix_ai">
         <meta name="twitter:creator" content="@radix_ai">
         <meta name="twitter:image:src" content="https://radix.ai/img/radix-ai-square-white-on-blue.png">
         <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-        <meta name="og:title" content="RADIX.AI">
+        <meta name="og:title" content="radix.ai">
         <meta name="og:description" content="We accelerate the pace at which Machine Learning innovations are turned into reality.">
         <meta name="og:image" content="https://radix.ai/img/radix-ai-square-white-on-blue.png">
         <meta name="og:url" content="https://radix.ai">
-        <meta name="og:site_name" content="RADIX.AI">
+        <meta name="og:site_name" content="radix.ai">
         <meta name="og:type" content="website">
         <!-- Favicon -->
         <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
