Improve job Read more

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             </div>
             <div class="jobs">
             <div class="job hide">
-                <h1>Machine Learning Engineer<span>Brussels</span><a href="#jobs" onclick="this.parentNode.parentNode.classList.toggle('hide'); return false;">Read more<i class="fa fa-chevron-right"></i></a></h1>
+                <h1><span>Machine Learning Engineer</span><a href="#jobs" onclick="this.parentNode.parentNode.classList.toggle('hide'); return false;">Read more<i class="fa fa-chevron-right"></i></a></h1>
                 <div class="description">
 
                     <h2>What you'll do</h2>
@@ -205,7 +205,7 @@
                 </div>
             </div>
             <div class="job hide">
-                <h1>Python Software Engineer<span>Brussels</span><a href="#jobs" onclick="this.parentNode.parentNode.classList.toggle('hide'); return false;">Read more<i class="fa fa-chevron-right"></i></a></h1>
+                <h1><span>Python Software Engineer</span><a href="#jobs" onclick="this.parentNode.parentNode.classList.toggle('hide'); return false;">Read more<i class="fa fa-chevron-right"></i></a></h1>
                 <div class="description">
 
                     <h2>What you'll do</h2>
