--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <div class="description">
 
                     <h2>What you'll do</h2>
-                    <p>You will work with our team of engineers to design, implement, deploy, and maintain end-to-end Machine Learning solutions for ourselves and our clients. You’ll have the opportunity to work on challenging and rewarding problems, including:</p>
+                    <p>You will work with our team of engineers to design, implement and deploy end-to-end Machine Learning solutions for ourselves and our clients. You’ll have the opportunity to work on challenging and rewarding problems, including:</p>
                     <ul>
                         <li>Building and deploying reproducible and scalable training pipelines.</li>
                         <li>Distributing training across GPUs and nodes with data and model parallelism.</li>
@@ -213,7 +213,7 @@
                 <div class="description">
 
                     <h2>What you'll do</h2>
-                    <p>You will work with our team of engineers to design, implement, deploy, and maintain end-to-end Machine Learning solutions for ourselves and our clients. You’ll have the opportunity to work on challenging and rewarding problems, including:</p>
+                    <p>You will work with our team of engineers to design, implement and deploy end-to-end Machine Learning solutions for ourselves and our clients. You’ll have the opportunity to work on challenging and rewarding problems, including:</p>
                     <ul>
                         <li>Designing and implementing APIs to expose Machine Learning services.</li>
                         <li>Developing build, test, and deploy automation pipelines.</li>
@@ -259,7 +259,7 @@
                 <div class="description">
 
                     <h2>What you'll do</h2>
-                    <p>You will work with our team of engineers to design, implement, deploy, and maintain end-to-end Machine Learning solutions for ourselves and our clients. You’ll have the opportunity to work on challenging and rewarding problems, including:</p>
+                    <p>You will work with our team of engineers to design, implement and deploy end-to-end Machine Learning solutions for ourselves and our clients. You’ll have the opportunity to work on challenging and rewarding problems, including:</p>
                     <ul>
                         <li>Building and deploying reproducible and scalable training pipelines.</li>
                         <li>Distributing training across GPUs and nodes with data and model parallelism.</li>
@@ -305,7 +305,7 @@
                 <div class="description">
 
                     <h2>What you'll do</h2>
-                    <p>You will work with our team of engineers to design, implement, deploy, and maintain end-to-end Machine Learning solutions for ourselves and our clients. You’ll have the opportunity to work on challenging and rewarding problems, including:</p>
+                    <p>You will work with our team of engineers to design, implement and deploy end-to-end Machine Learning solutions for ourselves and our clients. You’ll have the opportunity to work on challenging and rewarding problems, including:</p>
                     <ul>
                         <li>Designing and implementing APIs to expose Machine Learning services.</li>
                         <li>Developing build, test, and deploy automation pipelines.</li>
