several projects + adres

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                         <li>You are confident in your Software Engineering skills.</li>
                         <li>You are deeply interested in Machine Learning and Artificial Intelligence.</li>
                         <li>You have a master's or Ph.D. in Computer Science or a similar field.</li>
-                        <li>You have delivered at least one real-life project.</li>
+                        <li>You have delivered several real-life projects.</li>
                     </ul>
 
                     <h2>Your technology stack</h2>
@@ -366,7 +366,7 @@
             </p>
             <p>
                 <a class="logo" href="https://radix.ai">radix<span>.ai</span></a><br>
-                Start It @KBC, <a href="https://goo.gl/maps/XGT9kJtUeRy">Havenlaan 8, 1080 Brussel</a><br>
+                Co.Station Brussel<br> <a href="https://goo.gl/maps/gQyv1UFY1xm">Parvis Sainte-Gudule 5, 1000 Brussel</a><br>
                 VAT BE 0660.746.974
             </p>
             </div>
