Update Senior MLE + Python SWE job qualifications
Senior MLE:
- removed: "You are deeply interested in ..."
- added "You are an expert in ..." & "You are experienced at ..."

Python SWE:
- added: "You have delivered..."

--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
                         <li>You consider yourself an excellent Software Engineer.</li>
                         <li>You have a keen interest in Machine Learning and Artificial Intelligence.</li>
                         <li>You have a master’s or Ph.D. in Computer Science or a similar field.</li>
+                        <li>You have delivered at least one real-life project.</li>
                     </ul>
 
                     <h2>Your technology stack</h2>
@@ -273,9 +274,10 @@
 
                     <ul>
                         <li>You are confident in your Software Engineering skills.</li>
-                        <li>You are deeply interested in Machine Learning and Artificial Intelligence.</li>
+                        <li>You are an expert in Machine Learning and Artificial Intelligence.</li>
                         <li>You have a master's or Ph.D. in Computer Science or a similar field.</li>
                         <li>You have delivered several real-life projects.</li>
+                        <li>You are experienced at solutioning Machine Learning projects.</li>
                     </ul>
 
                     <h2>Your technology stack</h2>
