--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <div class="photo glimmer florian"></div>
                     <div class="name">
                         <span>Florian Goossens</span>
-                        <span>Sales Engineer</span>
+                        <span>Project Lead</span>
                         <span>
                             <a href="mailto:florian@radix.ai"><i class="fa fa-fw fa-envelope"></i></a>
                             <a href="https://be.linkedin.com/in/floriangoossens"><i class="fa fa-fw fa-linkedin"></i></a>
