Add 7 people to the 'meet the team'. Carousel with arrows on desktop and dots on mobile.

--- a/index.html
+++ b/index.html
@@ -97,58 +97,153 @@
                 <h1>Meet the team</h1><hr>
             </div>
             <div class="people">
-                <div class="person">
-                    <div class="photo glimmer davio"></div>
-                    <div class="name">
-                        <span>Davio Larnout</span>
-                        <span>Business Lead</span>
-                        <span>
-                            <a href="mailto:davio@radix.ai"><i class="fa fa-fw fa-envelope"></i></a>
-                            <a href="https://be.linkedin.com/in/daviolarnout"><i class="fa fa-fw fa-linkedin"></i></a>
-                            <a href="https://twitter.com/daviolarnout"><i class="fa fa-fw fa-twitter"></i></a>
-                            <a href="https://github.com/dlarnout"><i class="fa fa-fw fa-github"></i></a>
-                        </span>
+                <div class="siema">
+                    <div class="slide">
+                        <div class="person">
+                            <div class="photo glimmer davio"></div>
+                            <div class="name">
+                                <span>Davio Larnout</span>
+                                <span>Business Lead</span>
+                                <span>
+                                    <a href="mailto:davio@radix.ai"><i class="fa fa-fw fa-envelope"></i></a>
+                                    <a href="https://be.linkedin.com/in/daviolarnout"><i class="fa fa-fw fa-linkedin"></i></a>
+                                    <a href="https://twitter.com/daviolarnout"><i class="fa fa-fw fa-twitter"></i></a>
+                                    <a href="https://github.com/dlarnout"><i class="fa fa-fw fa-github"></i></a>
+                                </span>
+                            </div>
+                        </div>
+                        <div class="person">
+                            <div class="photo glimmer florian"></div>
+                            <div class="name">
+                                <span>Florian Goossens</span>
+                                <span>Project Lead</span>
+                                <span>
+                                    <a href="mailto:florian@radix.ai"><i class="fa fa-fw fa-envelope"></i></a>
+                                    <a href="https://be.linkedin.com/in/floriangoossens"><i class="fa fa-fw fa-linkedin"></i></a>
+                                    <a href="https://twitter.com/FlorianGoossens"><i class="fa fa-fw fa-twitter"></i></a>
+                                    <a href="https://github.com/floriango"><i class="fa fa-fw fa-github"></i></a>
+                                </span>
+                            </div>
+                        </div>
+                        <div class="person">
+                            <div class="photo glimmer laurent"></div>
+                            <div class="name">
+                                <span>Laurent Sorber, PhD.</span>
+                                <span>Technical Lead</span>
+                                <span>
+                                    <a href="mailto:laurent@radix.ai"><i class="fa fa-fw fa-envelope"></i></a>
+                                    <a href="https://be.linkedin.com/in/laurentsorber"><i class="fa fa-fw fa-linkedin"></i></a>
+                                    <a href="https://twitter.com/laurentsorber"><i class="fa fa-fw fa-twitter"></i></a>
+                                    <a href="https://github.com/lsorber"><i class="fa fa-fw fa-github"></i></a>
+                                </span>
+                            </div>
+                        </div>
+                        <div class="person">
+                            <div class="photo glimmer thibault"></div>
+                            <div class="name">
+                                <span>Thibault Verhoeven, PhD.</span>
+                                <span>Machine Learning Engineer</span>
+                                <span>
+                                    <a href="mailto:thibault@radix.ai"><i class="fa fa-fw fa-envelope"></i></a>
+                                    <a href="https://be.linkedin.com/in/thibault-verhoeven-349ba036"><i class="fa fa-fw fa-linkedin"></i></a>
+                                    <a href="https://twitter.com/verhoeven_th"><i class="fa fa-fw fa-twitter"></i></a>
+                                    <a href="https://github.com/twverhoe"><i class="fa fa-fw fa-github"></i></a>
+                                </span>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="person">
-                    <div class="photo glimmer florian"></div>
-                    <div class="name">
-                        <span>Florian Goossens</span>
-                        <span>Project Lead</span>
-                        <span>
-                            <a href="mailto:florian@radix.ai"><i class="fa fa-fw fa-envelope"></i></a>
-                            <a href="https://be.linkedin.com/in/floriangoossens"><i class="fa fa-fw fa-linkedin"></i></a>
-                            <a href="https://twitter.com/FlorianGoossens"><i class="fa fa-fw fa-twitter"></i></a>
-                            <a href="https://github.com/floriango"><i class="fa fa-fw fa-github"></i></a>
-                        </span>
+                    <div class="slide">
+                        <div class="person">
+                            <div class="photo glimmer corneliu"></div>
+                            <div class="name">
+                                <span>Corneliu Cofaru, PhD.</span>
+                                <span>Sr. Machine Learning Engineer</span>
+                                <span>
+                                    <a href="mailto:corneliu@radix.ai"><i class="fa fa-fw fa-envelope"></i></a> 
+                                    <a href="https://www.linkedin.com/in/corneliu-cofaru-62b8a71b/"><i class="fa fa-fw fa-linkedin"></i></a>
+                                    <a href="https://github.com/zgornel"><i class="fa fa-fw fa-github"></i></a>
+                                </span>
+                            </div>
+                        </div>
+                        <div class="person">
+                            <div class="photo glimmer maarten"></div>
+                            <div class="name">
+                                <span>Maarten Huijsmans</span>
+                                <span>Sr. Software Engineer</span>
+                                <span>
+                                    <a href="mailto:maarten@radix.ai"><i class="fa fa-fw fa-envelope"></i></a> 
+                                    <a href="https://www.linkedin.com/in/mhuijsmans/"><i class="fa fa-fw fa-linkedin"></i></a>
+                                    <a href="https://github.com/lukin0110"><i class="fa fa-fw fa-github"></i></a>
+                                </span>
+                            </div>
+                        </div>
+                        <div class="person">
+                            <div class="photo glimmer bart"></div>
+                            <div class="name">
+                                <span>Bart Van Bos</span>
+                                <span>Sr. Cloud DevOps Engineer</span>
+                                <span>
+                                    <a href="mailto:bart@radix.ai"><i class="fa fa-fw fa-envelope"></i></a> 
+                                    <a href="https://www.linkedin.com/in/bart-van-bos-b075227/"><i class="fa fa-fw fa-linkedin"></i></a>
+                                    <a href="https://github.com/boeboe"><i class="fa fa-fw fa-github"></i></a>
+                                </span>
+                            </div>
+                        </div>
+                        <div class="person">
+                            <div class="photo glimmer tanguy"></div>
+                            <div class="name">
+                                <span>Tanguy Naets</span>
+                                <span>Machine Learning Engineer</span>
+                                <span>
+                                    <a href="mailto:tanguy@radix.ai"><i class="fa fa-fw fa-envelope"></i></a> 
+                                    <a href="https://www.linkedin.com/in/tanguynaets/"><i class="fa fa-fw fa-linkedin"></i></a>
+                                    <a href="https://github.com/tanguyNaets"><i class="fa fa-fw fa-github"></i></a>
+                                </span>
+                            </div>
+                        </div>
                     </div>
+                    <div class="slide"> 
+                        <div class="person">
+                            <div class="photo glimmer rodolphe"></div>
+                            <div class="name">
+                                <span>Rodolphe Cambier</span>
+                                <span>Machine Learning Engineer</span>
+                                <span>
+                                    <a href="mailto:rodolphe@radix.ai"><i class="fa fa-fw fa-envelope"></i></a> 
+                                    <a href="https://www.linkedin.com/in/rodolphecambier/"><i class="fa fa-fw fa-linkedin"></i></a>
+                                    <a href="https://github.com/RCambier"><i class="fa fa-fw fa-github"></i></a>
+                                </span>
+                            </div>
+                        </div>
+                        <div class="person">
+                            <div class="photo glimmer enias"></div>
+                            <div class="name">
+                                <span>Enias Cailliau</span>
+                                <span>Machine Learning Engineer</span>
+                                <span>
+                                    <a href="mailto:enias@radix.ai"><i class="fa fa-fw fa-envelope"></i></a> 
+                                    <a href="https://www.linkedin.com/in/eniascailliau/"><i class="fa fa-fw fa-linkedin"></i></a>
+                                    <a href="https://twitter.com/ECailliau"><i class="fa fa-fw fa-twitter"></i></a>
+                                    <a href="https://github.com/EniasCailliau"><i class="fa fa-fw fa-github"></i></a>
+                                </span>
+                            </div>
+                        </div>
+                        <div class="person">
+                            <div class="photo glimmer bac"></div>
+                            <div class="name">
+                                <span>Bac Nguyen</span>
+                                <span>Machine Learning Engineer</span>
+                                <span>
+                                    <a href="mailto:bac@radix.ai"><i class="fa fa-fw fa-envelope"></i></a> 
+                                    <a href="https://www.linkedin.com/in/bac-nguyen-cong-ab8908124/"><i class="fa fa-fw fa-linkedin"></i></a>
+                                    <a href="https://github.com/bacnguyencong"><i class="fa fa-fw fa-github"></i></a>
+                                </span>
+                            </div>
+                        </div>
+                    </div>    
                 </div>
-                <div class="person">
-                    <div class="photo glimmer laurent"></div>
-                    <div class="name">
-                        <span>Laurent Sorber</span>
-                        <span>Technical Lead</span>
-                        <span>
-                            <a href="mailto:laurent@radix.ai"><i class="fa fa-fw fa-envelope"></i></a>
-                            <a href="https://be.linkedin.com/in/laurentsorber"><i class="fa fa-fw fa-linkedin"></i></a>
-                            <a href="https://twitter.com/laurentsorber"><i class="fa fa-fw fa-twitter"></i></a>
-                            <a href="https://github.com/lsorber"><i class="fa fa-fw fa-github"></i></a>
-                        </span>
-                    </div>
-                </div>
-                <div class="person">
-                    <div class="photo glimmer thibault"></div>
-                    <div class="name">
-                        <span>Thibault Verhoeven</span>
-                        <span>Machine Learning Engineer</span>
-                        <span>
-                            <a href="mailto:thibault@radix.ai"><i class="fa fa-fw fa-envelope"></i></a>
-                            <a href="https://be.linkedin.com/in/thibault-verhoeven-349ba036"><i class="fa fa-fw fa-linkedin"></i></a>
-                            <a href="https://twitter.com/verhoeven_th"><i class="fa fa-fw fa-twitter"></i></a>
-                            <a href="https://github.com/twverhoe"><i class="fa fa-fw fa-github"></i></a>
-                        </span>
-                    </div>
-                </div>
+                <img class="next" src="img/next.png">  </img>
+                <img class="prev" src="img/prev.png">  </img>
             </div>
         </div>
         </section>
@@ -380,6 +475,11 @@
             ga('create','UA-108277215-1','auto');ga('send','pageview')
         </script>
         <script src="https://www.google-analytics.com/analytics.js" async></script>
+        <script src="js/siema.min.js"></script>
+        <script src="js/index.js"> 
+           
+        </script>
+
 
     </body>
 </html>
