force css refresh

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link href="https://fonts.googleapis.com/css?family=Saira+Condensed:200&text=.AI" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/normalize.css/normalize.min.css">
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" type="text/css" href="index.css">
+        <link rel="stylesheet" type="text/css" href="index.css?v=2">
 
         <!-- Search Engine -->
         <meta name="description" content="We accelerate the pace at which Machine Learning innovations are turned into reality.">
