Change messenger greeting message

--- a/index.html
+++ b/index.html
@@ -489,7 +489,13 @@
                 }(document, 'script', 'facebook-jssdk'));</script>
         
         <!-- Your customer chat code -->
-        <div class="fb-customerchat" attribution=setup_tool page_id="2130690650548116" theme_color="#0066ff">
+        <div class="fb-customerchat" 
+            attribution=setup_tool 
+            page_id="2130690650548116" 
+            theme_color="#0066ff"
+            logged_in_greeting="Hi! We're here to answer any questions you may have."
+            logged_out_greeting="Hi! We're here to answer any questions you may have."
+            >
         </div>
 
     </body>
