Change Costation to BeCentral

--- a/index.html
+++ b/index.html
@@ -648,9 +648,9 @@
                     <a class="logo" href="https://radix.ai">radix
                         <span>.ai</span>
                     </a>
-                    <br> Co.Station Brussel
+                    <br> BeCentral
                     <br>
-                    <a href="https://goo.gl/maps/gQyv1UFY1xm">Parvis Sainte-Gudule 5, 1000 Brussel</a>
+                    <a href="https://goo.gl/maps/4muh9n16com">Cantersteen 10, 1000 Brussels</a>
                     <br> VAT BE 0660.746.974
                 </p>
             </div>
