Fix logo whitespace

--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
     <section id="hero">
         <div class="container">
             <div>
-                <a class="logo" href="https://radix.ai">radix
-                    <span>.ai</span>
-                </a>
+                <a class="logo" href="https://radix.ai">radix<span>.ai</span></a>
             </div>
         </div>
     </section>
@@ -90,9 +88,7 @@
             </div>
             <div class="description">
                 <p>
-                    <a class="logo" href="https://radix.ai">radix
-                        <span>.ai</span>
-                    </a> is a Belgium-based Machine Learning company.</p>
+                    <a class="logo" href="https://radix.ai">radix<span>.ai</span></a> is a Belgium-based Machine Learning company.</p>
                 <p>Our mission is to
                     <emph>accelerate</emph> the pace at which Machine Learning innovations are turned into reality.</p>
                 <p>We help
@@ -645,9 +641,7 @@
                         <i class="fa fa-fw fa-github"></i>radix-ai</a>
                 </p>
                 <p>
-                    <a class="logo" href="https://radix.ai">radix
-                        <span>.ai</span>
-                    </a>
+                    <a class="logo" href="https://radix.ai">radix<span>.ai</span></a>
                     <br> BeCentral
                     <br>
                     <a href="https://goo.gl/maps/4muh9n16com">Cantersteen 10, 1000 Brussels</a>
