--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
                     <a class="logo" href="https://radix.ai">radix<span>.ai</span></a>
                     <br> BeCentral
                     <br>
-                    <a href="https://goo.gl/maps/4muh9n16com">Cantersteen 10, 1000 Brussels</a>
+                    <a href="https://goo.gl/maps/tRByrfwNX5A2">Cantersteen 10, 1000 Brussels</a>
                     <br> VAT BE 0660.746.974
                 </p>
             </div>
