--- a/index.html
+++ b/index.html
@@ -621,6 +621,20 @@
         </div>
     </section>
 
+    <section id="blog">
+        <div class="container">
+            <div class="title">
+                <h1> Blog </h1>
+                <hr>
+            </div>
+            <div class="description">
+                <p>
+                    Follow our adventures on <a href="https://medium.com/radix-ai-blog">Medium</a>.
+                </p>
+            </div>
+        </div>
+    </section>
+
     <section id="contact">
         <div class="container">
             <div class="title">
